# DominiGamesCheckers

./: CMakeLists.txt  LICENCE.md  README.md
.github/workflows/: linux_builds.yml
include/: config.h
include/Controller/: controller.h  pk_controller.h  player.h  player_ai.h  player_user.h
include/Facades/: game.h
include/Graphics/: graphic.h  rendering_element.h
include/Model/: board.h  step.h
include/View/: display.h  window.h
src/: main.cpp
src/Controller/: controller.cpp  pk_controller.cpp  player.cpp  player_ai.cpp  player_user.cpp
src/Facades/: game.cpp
src/Graphics/: graphic.cpp  rendering_element.cpp
src/Model/: board.cpp  player.cpp  player_ai.cpp  player_user.cpp
src/View/: display.cpp  window.cpp
